k8s-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress
spec:
    ingressClassName: nginx
    rules:

        - http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                       service:
                            name: my-app-svc   #should be same as service metadata name
                            port:
                                number: 8085
                - path: /login
                  pathType: Prefix 
                  backend:
                      service:
                        name: my-app-svc
                        port:
                          number: 8085
